cmake_minimum_required(VERSION 2.6)
project(example)
set(LIB_DIR ${example_SOURCE_DIR}/../libs)
set(DEP_DIR ${example_SOURCE_DIR}/../depends)
set(INC_DIR ${example_SOURCE_DIR}/../include)
set(SRC_DIR ${example_SOURCE_DIR}/../src)
set(BIN_DIR ${example_SOURCE_DIR}/bin)
set(EXP_DIR ${example_SOURCE_DIR})
add_subdirectory(tcpTest)
add_subdirectory(udpTest)

